# native_animated_image

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: build-binaries.yml  ci.yml
crates/native_animated_image_codec/: Cargo.toml
crates/native_animated_image_codec/src/: apng_decoder.rs  avif_decoder.rs  ffi.rs  gif_decoder.rs  lib.rs  webp_decoder.rs
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/lingyan000/native_animated_image_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
tool/: build_native.dart
