[package]
name = "native_animated_image_codec"
version = "0.2.2"
edition = "2021"
description = "Native animated image (GIF/APNG/animated WebP/AVIF) codec for Flutter via FFI"
license = "MIT"
repository = "https://github.com/Lingyan000/native_animated_image"

[lib]
# cdylib for runtime FFI (macOS .dylib / Linux .so / Windows .dll / Android .so)
# staticlib for iOS .a linkage
crate-type = ["cdylib", "staticlib"]
name = "native_animated_image_codec"

[dependencies]
# GIF decoder (frame-by-frame, indexed-to-RGBA via ColorOutput::RGBA)
gif = "0.13"

# PNG / APNG decoder (acTL / fcTL / fdAT chunks for animation)
png = "0.18"

# Animated WebP decoder (lossy + lossless animation support)
image-webp = "0.2"

# AVIF decoder (pure Rust): zenavif wraps rav1d-safe (AV1 decoder, Rust port
# of dav1d with safe SIMD) + zenavif-parse (ISO BMFF demuxer with animation
# and grid support). Used as fallback for AVIF where the platform's system
# decoder either isn't available or doesn't expose per-frame access —
# notably Android's ImageDecoder which can decode animated AVIF but won't
# let us pull individual frames out of an AnimatedImageDrawable.
zenavif = "0.1"
# Convert zenavif's PixelBuffer to RGBA8888 (needed for Flutter's
# ui.decodeImageFromPixels which expects PixelFormat.rgba8888).
zenpixels-convert = { version = "0.2", features = ["rgb"] }
rgb = "0.8"
bytemuck = "1"

# JSON for FFI metadata transfer
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Handle registry locking
parking_lot = "0.12"

# Error types
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
