[package]
name = "native_animated_image_codec"
version = "0.3.0"
edition = "2021"
description = "Native animated image (GIF/APNG/animated WebP) codec for Flutter via FFI"
license = "MIT"
repository = "https://github.com/Lingyan000/native_animated_image"

[lib]
# cdylib for runtime FFI (macOS .dylib / Linux .so / Windows .dll / Android .so)
# staticlib for iOS .a linkage
crate-type = ["cdylib", "staticlib"]
name = "native_animated_image_codec"

[dependencies]
# GIF decoder (frame-by-frame, indexed-to-RGBA via ColorOutput::RGBA)
gif = "0.13"

# PNG / APNG decoder (acTL / fcTL / fdAT chunks for animation)
png = "0.18"

# Animated WebP decoder (lossy + lossless animation support)
image-webp = "0.2"

# AVIF 在 v0.3.0 移除。v0.2.x 用 zenavif (rav1d-safe) 做 AVIF 解码,
# 但 rav1d 在 ARM SIMD path 有 panic crash bug (mc_arm.rs:5905 越界),
# Cargo profile panic=abort 直接 crash 整个 app。armv7 还要 nightly Rust。
# 综合判断不适合作为生产依赖。
# AVIF 解码请使用 `flutter_avif` 包 (libavif + dav1d C 库,工业标准稳定)。

# JSON for FFI metadata transfer
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Handle registry locking
parking_lot = "0.12"

# Error types
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
